# 03_tradingview_companion

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  HANDOFF.md  LICENSE  README.md  TODOS.md  pyproject.toml
deploy/launchd/: com.tvcompanion.bot.plist.example
docs/adr/: 0001-domain-and-architecture-seed.md  0002-plan-eng-review-decisions.md  0003-pivot-to-02-read-endpoint.md
docs/specs/: 02_read_endpoint_contract.md  webhook_v6_1.md
plans/: 2026-05-08-tradingview-companion-design.md
src/tvc/: config.py  storage.py
src/tvc/bot/: __main__.py  auth.py  handlers.py
src/tvc/claude_sdk/: analyst.py
src/tvc/mcp_client/: chart_ops.py
src/tvc/resources/: analyze_prompt.md  private_indicators.example.json  symbol_map.json
src/tvc/source/: endpoint.py
tests/: conftest.py
